correct file names in html

--- a/staff/judy-grayland/frontend/strings/index.html
+++ b/staff/judy-grayland/frontend/strings/index.html
@@ -15,7 +15,7 @@
     <script src="lastIndexOf.js"></script>
     <script src="lastIndexOf.spec.js"></script>
 
-    <script src="includes.js"></script>
-    <script src="includes.spec.js"></script>
+    <script src="WiPincludes.js"></script>
+    <script src="WiPincludes.spec.js"></script>
   </body>
 </html>
