--- a/staff/ivan-vallejos/frontend/app5/index.html
+++ b/staff/ivan-vallejos/frontend/app5/index.html
@@ -46,6 +46,22 @@
 
     <div id="home">
         <h1>Hello, Home!</h1>
+
+        <button id="logout-button">Logout</button>
+
+        <form id="change-email-form">
+
+            <label for="new-email">New Email</label>
+            <input type="email" id="new-email">
+
+            <label for="new-email-confirm"> Confirm new Email</label>
+            <input type="email" id="new-email-confirm">
+
+            <label for="password">Password</label>
+            <input type="password" id="password">
+
+            <button>Update email</button>
+        </form>
     </div>
 
     <script src="validators.js"></script>
