Add the app6 and correct main in others main apps

--- a/staff/ivan-vallejos/frontend/app1/index.html
+++ b/staff/ivan-vallejos/frontend/app1/index.html
@@ -16,10 +16,10 @@
             <input id='name' type="text">
 
             <label for="email">Email</label>
-            <input id='email' type="text">
+            <input id='email' type="email">
 
             <label for="password">Password</label>
-            <input id="password" type="text">
+            <input id="password" type="password">
 
             <button>Register</button>
         </form>
@@ -33,10 +33,10 @@
         <form>
 
             <label for="email">Email</label>
-            <input id='email' type="text">
+            <input id='email' type="email">
 
             <label for="password">Password</label>
-            <input id="password" type="text">
+            <input id="password" type="password">
 
             <button>Login</button>
         </form>
