correct last lastIndexOf file

--- a/staff/cristian-rubert/frontend/app/index.html
+++ b/staff/cristian-rubert/frontend/app/index.html
@@ -63,7 +63,7 @@
             <input id="email" type="email">
 
             <label for="email2">New E-mail</label>
-            <input type="email" id="email2">
+            <input type="email2" id="email">
 
             <button id="confirmail">Submit</button>
         </form>
