file includes 3 methods with my own resolution included for 3 strings

--- a/staff/cristian-rubert/frontend/app/Strings/index.html
+++ b/staff/cristian-rubert/frontend/app/Strings/index.html
@@ -15,6 +15,8 @@
     <script src="indexOf.spec.js"></script>
     <script src="lastIndexOf.js"></script>
     <script src="lastIndexOf.spec.js"></script>
+    <script src="includes.js"></script>
+    <script src="includes.spec.js"></script>
 </body>
 
 </html>
