--- a/staff/anna-cuenca/frontend/strings/index.html
+++ b/staff/anna-cuenca/frontend/strings/index.html
@@ -8,11 +8,16 @@
 </head>
 
 <body>
-    <script src="charAt.js"></script>
-    <script src="charAt.spec.js"></script>
+    <!--  <script src="charAt.js"></script> -->
+    <!-- <script src="charAt.spec.js"></script>
 
     <script src="indexOf.js"></script>
-    <script src="indexOf.spec.js"></script>
+    <script src="indexOf.spec.js"></script>-->
+
+
+    <script src="includes.js"></script>
+    <script src="includes.spec.js"></script>
+
 </body>
 
 </html>
