update class version of app; update string standalone functions; update array standalone functions

--- a/staff/judy-grayland/frontend/app/index.html
+++ b/staff/judy-grayland/frontend/app/index.html
@@ -56,6 +56,19 @@
         <button id="change-email-btn">Update e-mail</button>
       </form>
 
+      <form id="change-password-form">
+        <label for="password">Password:</label>
+        <input type="password" id="password" /><br />
+
+        <label for="new-password">New password:</label>
+        <input type="password" id="new-password" /><br />
+
+        <label for="new-password-confirm">Confirm new password:</label>
+        <input type="password" id="new-password-confirm" /><br />
+
+        <button id="change-password-btn">Update password</button>
+      </form>
+
       <!-- <a href="">Account settings</a> -->
       <button id="logout-btn">Log out</button>
 
