add functions forEach, map and filter

--- a/staff/isabel-dominguez/frontend/arrays/index.html
+++ b/staff/isabel-dominguez/frontend/arrays/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script src="at.js"></script>
+    <!-- <script src="at.js"></script>
     <script src="at.spec.js"></script>
 
     <script src="concat.js"></script>
@@ -25,6 +25,12 @@
 
     <script src="push.js"></script>
     <script src="push.spec.js"></script>
+
+    <script src="forEach.js"></script>
+    <script src="forEach.spec.js"></script> -->
+
+    <script src="map.js"></script>
+    <script src="map.spec.js"></script>
 </body>
 
 </html>
