algorítmica de métodos de array

--- a/staff/luis-felipe-garcia/frontend/arrays/index.html
+++ b/staff/luis-felipe-garcia/frontend/arrays/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<script src="at.js"></script>
+<!-- <script src="at.js"></script>
 <script src="at.spec.js"></script>
 
 <script src="concat.js"></script>
@@ -23,7 +23,17 @@
 <script src="pop.spec.js"></script>
 
 <script src="push.js"></script>
-<script src="push.spec.js"></script>
+<script src="push.spec.js"></script> 
+
+<script src="map.js"></script>
+<script src="map.spec.js"></script>
+
+<script src="filter.js"></script>
+<script src="filter.spec.js"></script>-->
+
+<script src="find.js"></script>
+<script src="find.spec.js"></script>
+
     
 </body>
 </html>
