add new methods -slice and splice- on arrays

--- a/staff/abel-prieto/FRONTEND/ARRAYS/index_arrays.html
+++ b/staff/abel-prieto/FRONTEND/ARRAYS/index_arrays.html
@@ -24,5 +24,23 @@
     <script src="pop.js"></script>
     <script src="pop.spec.js"></script>
 
+    <script src="forEach.js"></script>
+    <script src="forEach.spec.js"></script>
+
+    <script src="map.js"></script>
+    <script src="map.spec.js"></script>
+
+    <script src="filter.js"></script>
+    <script src="filter.spec.js"></script>
+
+    <script src="find.js"></script>
+    <script src="find.spec.js"></script>
+
+    <script src="slice.js"></script>
+    <script src="slice.spec.js"></script>
+
+    <script src="splice.js"></script>
+    <script src="splice.spec.js"></script>
+
 </body>
 </html>
