--- a/staff/josem-cembrano/frontend/app-rework/arrays/index.html
+++ b/staff/josem-cembrano/frontend/app-rework/arrays/index.html
@@ -7,14 +7,11 @@
 </head>
 <body>
 
-<script src="at.js"></script>
+<!-- <script src="at.js"></script>
 <script src="at.spec.js"></script>
 
 <script src="concat.js"></script>
 <script src="concat.spec.js"></script>
-
-<script src="indexOf.js"></script>
-<script src="indexOf.spec.js"></script>
 
 <script src="join.js"></script>
 <script src="join.spec.js"></script>
@@ -23,7 +20,23 @@
 <script src="pop.spec.js"></script>
 
 <script src="push.js"></script>
-<script src="push.spec.js"></script>
+<script src="push.spec.js"></script> 
+
+<script src="map.js"></script>
+<script src="map.spec.js"></script>
+
+<script src="filter.js"></script>
+<script src="filter.spec.js"></script>
+
+<script src="find.js"></script>
+<script src="find.spec.js"></script>
+
+<script src="slice.js"></script>
+<script src="slice.spec.js"></script>-->
+
+<script src="splice.js"></script>
+<script src="splice.spec.js"></script>
+
     
 </body>
 </html>
