--- a/staff/manuel-barzi/frontend/arrays/index.html
+++ b/staff/manuel-barzi/frontend/arrays/index.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arrays</title>
+
+    <link rel="shortcut icon" href="https://www.b00tc4mp.com/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
-    <script src="forEach.js"></script>
-    <script src="forEach.spec.js"></script>
+    <!-- <script src="forEach.js"></script>
+    <script src="forEach.spec.js"></script> -->
+
+    <script src="splice.js"></script>
+    <script src="splice.spec.js"></script>
 </body>
 
 </html>
