change app view and add favicon

--- a/staff/isabel-dominguez/frontend/app.1/index.html
+++ b/staff/isabel-dominguez/frontend/app.1/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="icons8-cooking-64.png" type="image/x-icon">
     <title>App</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div id="register">
         <h1>Register</h1>
@@ -50,4 +53,5 @@
     <script src="logic.js"></script>
     <script src="main.js"></script>
 </body>
+
 </html>
