Add, refactor and modify array methods

--- a/staff/isabel-dominguez/frontend/arrays/index.html
+++ b/staff/isabel-dominguez/frontend/arrays/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <!-- <script src="at.js"></script>
+    <script src="at.js"></script>
     <script src="at.spec.js"></script>
 
     <script src="concat.js"></script>
@@ -28,10 +28,22 @@
     <script src="push.spec.js"></script>
 
     <script src="forEach.js"></script>
-    <script src="forEach.spec.js"></script> -->
+    <script src="forEach.spec.js"></script>
 
     <script src="map.js"></script>
     <script src="map.spec.js"></script>
+
+    <script src="filter.js"></script>
+    <script src="filter.spec.js"></script>
+
+    <script src="find.js"></script>
+    <script src="find.spec.js"></script>
+
+    <script src="slice.js"></script>
+    <script src="slice.spec.js"></script>
+
+    <script src="splice.js"></script>
+    <script src="splice.spec.js"></script>
 </body>
 
 </html>
