--- a/staff/ana-delrio/frontend/strings/index.html
+++ b/staff/ana-delrio/frontend/strings/index.html
@@ -16,6 +16,10 @@
 
     <script src="includes.js"></script>
     <script src="includes.spec.js"></script>
+
+    <script src="includes.js"></script>
+    <script src="includes.spec.js"></script>
+
 </body>
 
 </html>
