add arrays forEach

--- a/staff/ana-delrio/frontend/arrays/index.html
+++ b/staff/ana-delrio/frontend/arrays/index.html
@@ -21,7 +21,7 @@
     <script src="indexOf.js"></script>
     <script src="indexOf.spec.js"></script>
 
-    script src="pop.js"></script>
+    <script src="pop.js"></script>
     <script src="pop.spec.js"></script>
 
     <script src="map.js"></script>
@@ -32,6 +32,9 @@
 
     <script src="at.js"></script>
     <script src="at.spec.js"></script>
+
+    <script src="forEach.js"></script>
+    <script src="forEach.spec.js"></script>
 
 </body>
 
