--- a/staff/cristian-rubert/frontend/app/index.html
+++ b/staff/cristian-rubert/frontend/app/index.html
@@ -5,22 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>App</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="register">
+    <div id="register-view">
         <h1>Register</h1>
 
         <form>
-            <label for="name">Name</label>
-            <input id="name" type="text">
+            <label for="name-input">Name</label>
+            <input id="name-input" type="text">
 
-            <label for="email">E-mail</label>
-            <input id="email" type="email">
+            <label for="email-input">E-mail</label>
+            <input id="email-input" type="email">
 
-            <label for="password">Password</label>
-            <input type="password" id="password">
+            <label for="password-input">Password</label>
+            <input type="password" id="password-input">
 
             <button>Register</button>
         </form>
@@ -28,15 +29,15 @@
         <a href="">Login</a>
     </div>
 
-    <div id="login">
+    <div id="login-view">
         <h1>Login</h1>
 
         <form>
-            <label for="email">E-mail</label>
-            <input id="email" type="email">
+            <label for="email-input">E-mail</label>
+            <input id="email-input" type="email">
 
-            <label for="password">Password</label>
-            <input type="password" id="password">
+            <label for="password-input">Password</label>
+            <input type="password" id="password-input">
 
             <button>Login</button>
         </form>
@@ -44,67 +45,59 @@
         <a href="">Register</a>
     </div>
 
-    <div id="home">
-        
-        <h1>Hello, Home!</h1>
+    <div id="home-view">
+        <header class="home-header">
+            <h1><a href="" id="home-link">Home</a></h1>
 
-        <button id="newmail">Change Email</button>
-        <button id="newpassword">Change Password</button>
-        <hr>
-        <button id="logout">Logout</button>
+            <div>
+                <a href="" class="profile-link" id="profile-link">Profile</a>
 
-    </div>   
+                <button id="logout-button">Logout</button>
+            </div>
+        </header>
 
-    <div id="changemail">
-        <h1>Change Email</h1>
+        <div id="profile-view">
+            <h2>Update e-mail</h2>
 
-        <form>
-            <label for="email">Old E-mail</label>
-            <input id="email" type="email">
+            <form id="change-email-form">
+                <label for="new-email-input">New e-mail</label>
+                <input id="new-email-input" type="email">
 
-            <label for="email2">New E-mail</label>
-            <input type="email2" id="email">
+                <label for="new-email-confirm-input">Confirm new e-mail</label>
+                <input id="new-email-confirm-input" type="email">
 
-            <button id="confirmail">Submit</button>
-        </form>
+                <label for="password-input">Password</label>
+                <input type="password" id="password-input">
 
+                <button>Update e-mail</button>
+            </form>
+
+            <h2>Update password</h2>
+
+            <form id="change-password-form">
+                <label for="password-input">Current password</label>
+                <input type="password" id="password-input">
+
+                <label for="new-password-input">New password</label>
+                <input id="new-password-input" type="password">
+
+                <label for="new-password-confirm-input">Confirm new password</label>
+                <input id="new-password-confirm-input" type="password">
+
+                <button>Update password</button>
+            </form>
+        </div>
     </div>
-        
-    <div id="changepassword">
-        <h1>Change Password</h1>
-        <form>
-            <label for="password">Old Password</label>
-            <input id="password" type="email">
 
-            <label for="password2">New Password</label>
-            <input type="password" id="password2">
-
-            <button id="confirmpass">Submit</button>
-        </form>
-
-    </div>
-
-        <!-- <form>
-            <label for="email">New E-mail</label>
-            <input id="email2" type="email">
-
-            <label for="password2">New Password</label>
-            <input type="password" id="password2">
-
-            <button>Login</button>
-            <a href="">Change password</a>
-
-        </form> -->                  
-
-        <!-- TODO implement logout <button>Logout</button> (onclick) -->
-
-        <!-- TODO implement change email panel (form) -->
-
-        <!-- TODO implement change password panel (form) -->
-    <script src="validators.js"></script>
     <script src="data.js"></script>
+
+    <script src="validators.js"></script>
     <script src="logic.js"></script>
+
     <script src="main.js"></script>
+    <script src="views/login.js"></script>
+    <script src="views/register.js"></script>
+    <script src="views/home.js"></script>
 </body>
 
 </html>
