--- a/staff/ana-delrio/frontend/arrays/index.html
+++ b/staff/ana-delrio/frontend/arrays/index.html
@@ -9,11 +9,23 @@
 
 <body>
 
+    <script src="find.js"></script>
+    <script src="find.spec.js"></script>
+
+    <!--<script src="map.js"></script>
+    <script src="map.spec.js"></script>
+
+    <script src="filter.js"></script>
+    <script src="filter.spec.js"></script>
+        
     <script src="concat.js"></script>
     <script src="concat.spec.js"></script>
 
     <script src="join.js"></script>
     <script src="join.spec.js"></script>
+
+    <script src="map.js"></script>
+    <script src="map.spec.js"></script>
 
     <script src="push.js"></script>
     <script src="push.spec.js"></script>
@@ -21,20 +33,17 @@
     <script src="indexOf.js"></script>
     <script src="indexOf.spec.js"></script>
 
+    <script src="forEach.js"></script>
+    <script src="forEach.spec.js"></script>
+
     <script src="pop.js"></script>
     <script src="pop.spec.js"></script>
-
-    <script src="map.js"></script>
-    <script src="map.spec.js"></script>
 
     <script src="splice.js"></script>
     <script src="splice.spec.js"></script>
 
     <script src="at.js"></script>
-    <script src="at.spec.js"></script>
-
-    <script src="forEach.js"></script>
-    <script src="forEach.spec.js"></script>
+    <script src="at.spec.js"></script>-->
 
 </body>
 
