new folder Curry challenger

--- a/staff/josem-cembrano/frontend/app-rework/curries/index.html
+++ b/staff/josem-cembrano/frontend/app-rework/curries/index.html
@@ -8,14 +8,14 @@
 </head>
 
 <body>
-    <script src="Curry.constructor.js"></script>
-    <!-- <script src="Curry.constructor.spec.js"></script> -->
+    <!--<script src="Curry.constructor1.js"></script>
+    <script src="Curry.constructor.spec.js"></script>-->
 
     <script src="Curry.prototype.push.js"></script>
     <script src="Curry.prototype.push.spec.js"></script>
 
-    <!-- <script src="Curry.prototype.forEach.js"></script>
-    <script src="Curry.prototype.forEach.spec.js"></script> -->
+    <!--<script src="Curry.prototype.forEach.js"></script>
+    <script src="Curry.prototype.forEach.spec.js"></script>-->
 </body>
 
 </html>
