correct and update standalone array functions; add new standalone array  functions = map, forEach, filter and find

--- a/staff/judy-grayland/frontend/arrays/index.html
+++ b/staff/judy-grayland/frontend/arrays/index.html
@@ -23,5 +23,17 @@
 
     <script src="push.js"></script>
     <script src="push.spec.js"></script>
+
+    <script src="forEach.js"></script>
+    <script src="forEach.spec.js"></script>
+
+    <script src="map.js"></script>
+    <script src="map.spec.js"></script>
+
+    <script src="filter.js"></script>
+    <script src="filter.spec.js"></script>
+
+    <script src="find.js"></script>
+    <script src="find.spec.js"></script>
   </body>
 </html>
