--- a/staff/belen-garnica/frontend/app/index.html
+++ b/staff/belen-garnica/frontend/app/index.html
@@ -5,21 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>App</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="register">
+    <div id="register-view">
         <h1>Register</h1>
 
         <form>
-            <label for="name">Name</label>
-            <input id="name" type="text">
+            <label for="name-input">Name</label>
+            <input id="name-input" type="text">
 
-            <label for="email">E-mail</label>
-            <input id="email" type="email">
+            <label for="email-input">E-mail</label>
+            <input id="email-input" type="email">
 
-            <label for="password">Password</label>
-            <input type="password" id="password">
+            <label for="password-input">Password</label>
+            <input type="password" id="password-input">
 
             <button>Register</button>
         </form>
@@ -27,15 +29,15 @@
         <a href="">Login</a>
     </div>
 
-    <div id="login">
+    <div id="login-view">
         <h1>Login</h1>
 
         <form>
-            <label for="email">E-mail</label>
-            <input id="email" type="email">
+            <label for="email-input">E-mail</label>
+            <input id="email-input" type="email">
 
-            <label for="password">Password</label>
-            <input type="password" id="password">
+            <label for="password-input">Password</label>
+            <input type="password" id="password-input">
 
             <button>Login</button>
         </form>
@@ -43,48 +45,59 @@
         <a href="">Register</a>
     </div>
 
-    <div id="home">
-        <h1>Hello, Home!</h1>
+    <div id="home-view">
+        <header class="home-header">
+            <h1><a href="" id="home-link">Home</a></h1>
 
-        <form>
-            <label for="email">Actual email</label>
-            <input id="email" type="email">
+            <div>
+                <a href="" class="profile-link" id="profile-link">Profile</a>
 
-            <label for="newEmail">New email</label>
-            <input type="newEmail" id="newEmail">
+                <button id="logout-button">Logout</button>
+            </div>
+        </header>
 
-            <button>Change email</button>
-        </form>
+        <div id="profile-view">
+            <h2>Update e-mail</h2>
 
-        <form>
-            <label for="password">Actual password</label>
-            <input id="password" type="password">
+            <form id="change-email-form">
+                <label for="new-email-input">New e-mail</label>
+                <input id="new-email-input" type="email">
 
-            <label for="newPassword">New password</label>
-            <input type="newPassword" id="newPassword">
+                <label for="new-email-confirm-input">Confirm new e-mail</label>
+                <input id="new-email-confirm-input" type="email">
 
-            <label for="confirmPassword">Confirm new password</label>
-            <input type="confirmPassword" id="confirmPassword">
+                <label for="password-input">Password</label>
+                <input type="password" id="password-input">
 
-            <button>Change password</button>
-        </form>
+                <button>Update e-mail</button>
+            </form>
 
-        <form>
-            <button>Logout</button>
-        </form>
+            <h2>Update password</h2>
 
-        <!-- TODO implement logout <button>Logout</button> (onclick) -->
+            <form id="change-password-form">
+                <label for="password-input">Current password</label>
+                <input type="password" id="password-input">
 
-        <!-- TODO implement change email panel (form) -->
+                <label for="new-password-input">New password</label>
+                <input id="new-password-input" type="password">
 
-        <!-- TODO implement change password panel (form) -->
+                <label for="new-password-confirm-input">Confirm new password</label>
+                <input id="new-password-confirm-input" type="password">
+
+                <button>Update password</button>
+            </form>
+        </div>
     </div>
 
-    <script src="validators.js"></script>
-
     <script src="data.js"></script>
+
+    <script src="validators.js"></script>
     <script src="logic.js"></script>
+
     <script src="main.js"></script>
+    <script src="views/login.js"></script>
+    <script src="views/register.js"></script>
+    <script src="views/home.js"></script>
 </body>
 
 </html>
