--- a/staff/judy-grayland/frontend/curries/index.html
+++ b/staff/judy-grayland/frontend/curries/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <script src="Curry.constructor.js"></script>
-    <!-- <script src="Curry.constructor.spec.js"></script> -->
+    <script src="Curry.constructor.spec.js"></script>
 
     <script src="Curry.prototype.push.js"></script>
     <script src="Curry.prototype.push.spec.js"></script>
@@ -23,5 +23,14 @@
 
     <script src="Curry.prototype.forEach.js"></script>
     <script src="Curry.prototype.forEach.spec.js"></script>
+
+    <script src="Curry.prototype.join.js"></script>
+    <script src="Curry.prototype.join.spec.js"></script>
+
+    <script src="Curry.prototype.find.js"></script>
+    <script src="Curry.prototype.find.spec.js"></script>
+
+    <script src="Curry.prototype.filter.js"></script>
+    <script src="Curry.prototype.filter.spec.js"></script>
   </body>
 </html>
