all methods on curry type done; list includes

--- a/staff/abel-prieto/FRONTEND/CURRIES/index_curries.html
+++ b/staff/abel-prieto/FRONTEND/CURRIES/index_curries.html
@@ -19,5 +19,26 @@
     <script src="Curry.prototype.pop.js"></script>
     <script src="Curry.prototype.pop.spec.js"></script>
 
+    <script src="Curry.prototype.at.js"></script>
+    <script src="Curry.prototype.at.spec.js"></script>
+
+    <script src="Curry.prototype.filter.js"></script>
+    <script src="Curry.prototype.filter.spec.js"></script>
+
+    <script src="Curry.prototype.find.js"></script>
+    <script src="Curry.prototype.find.spec.js"></script>
+
+    <script src="Curry.prototype.join.js"></script>
+    <script src="Curry.prototype.join.spec.js"></script>
+   
+    <script src="Curry.prototype.indexOf.js"></script>
+    <script src="Curry.prototype.indexOf.spec.js"></script>
+
+    <script src="Curry.prototype.map.js"></script>
+    <script src="Curry.prototype.map.spec.js"></script>
+
+    <script src="Curry.prototype.slice.js"></script>
+    <script src="Curry.prototype.slice.spec.js"></script>
+
 </body>
 </html>
