add curries and strings

--- a/staff/belen-ivars/frontend/strings/index.html
+++ b/staff/belen-ivars/frontend/strings/index.html
@@ -17,7 +17,7 @@
     <script src="lastIndexOf.js"></script>
     <script src="lastIndexOf.spec.js"></script>
 
-    <script src="includes.js"></script>
+    <script src="includesMeu.js"></script>
     <script src="includes.spec.js"></script>
 </body>
 
