modify methods on curries

--- a/staff/abel-prieto/FRONTEND/CURRIES/index_curries.html
+++ b/staff/abel-prieto/FRONTEND/CURRIES/index_curries.html
@@ -10,15 +10,6 @@
     <script src="Curry.constructor.js"></script>
     <!-- <script src="Curry.constructor.spec.js"></script> -->
 
-    <script src="Curry.prototype.forEach.js"></script>
-    <script src="Curry.prototype.forEach.spec.js"></script>
-
-    <script src="Curry.prototype.push.js"></script>
-    <script src="Curry.prototype.push.spec.js"></script>
-
-    <script src="Curry.prototype.pop.js"></script>
-    <script src="Curry.prototype.pop.spec.js"></script>
-
     <script src="Curry.prototype.at.js"></script>
     <script src="Curry.prototype.at.spec.js"></script>
 
@@ -28,17 +19,28 @@
     <script src="Curry.prototype.find.js"></script>
     <script src="Curry.prototype.find.spec.js"></script>
 
-    <script src="Curry.prototype.join.js"></script>
-    <script src="Curry.prototype.join.spec.js"></script>
-   
+    <script src="Curry.prototype.forEach.js"></script>
+    <script src="Curry.prototype.forEach.spec.js"></script>
+       
     <script src="Curry.prototype.indexOf.js"></script>
     <script src="Curry.prototype.indexOf.spec.js"></script>
+
+    <script src="Curry.prototype.join.js"></script>
+    <script src="Curry.prototype.join.spec.js"></script>
 
     <script src="Curry.prototype.map.js"></script>
     <script src="Curry.prototype.map.spec.js"></script>
 
+    <script src="Curry.prototype.pop.js"></script>
+    <script src="Curry.prototype.pop.spec.js"></script>
+    
+    <script src="Curry.prototype.push.js"></script>
+    <script src="Curry.prototype.push.spec.js"></script>
+
     <script src="Curry.prototype.slice.js"></script>
     <script src="Curry.prototype.slice.spec.js"></script>
 
+    <script src="Curry.prototype.splice.js"></script>
+    <script src="Curry.prototype.splice.spec.js"></script>
 </body>
 </html>
