add curries prototype join, pop and splice

--- a/staff/belen-ivars/frontend/curries/index.html
+++ b/staff/belen-ivars/frontend/curries/index.html
@@ -9,20 +9,26 @@
 
 <body>
 	<script src="Curry.constructor.js"></script>
-	<!-- <script src="Curry.constructor.spec.js"></script> -->
+	<!--  <script src="Curry.constructor.spec.js"></script>
 
 	<script src="Curry.prototype.pop.js"></script>
 	<script src="Curry.prototype.pop.spec.js"></script>
 
-	<!-- <script src="Curry.prototype.push.js"></script>
+	<script src="Curry.prototype.push.js"></script>
 	<script src="Curry.prototype.push.spec.js"></script>
 
 	<script src="Curry.prototype.at.js"></script>
-	<script src="Curry.prototype.at.spec.js"></script> -->
+	<script src="Curry.prototype.at.spec.js"></script>
 
 
-	<!-- 	<script src="Curry.prototype.forEach.js"></script>
+	<script src="Curry.prototype.forEach.js"></script>
 	<script src="Curry.prototype.forEach.spec.js"></script> -->
+
+	<!-- <script src="Curry.prototype.splice.js"></script>
+	<script src="Curry.prototype.splice.spec.js"></script> -->
+
+	<script src="Curry.prototype.join.js"></script>
+	<script src="Curry.prototype.join.spec.js"></script>
 </body>
 
 </html>
