modify some files: oop, app

--- a/staff/josem-cembrano/frontend/app-rework/arrays/index.html
+++ b/staff/josem-cembrano/frontend/app-rework/arrays/index.html
@@ -34,8 +34,11 @@
 <script src="slice.js"></script>
 <script src="slice.spec.js"></script>-->
 
-<script src="splice.js"></script>
-<script src="splice.spec.js"></script>
+<!--<script src="splice.js"></script>
+<script src="splice.spec.js"></script>-->
+
+<!--<script src="forEach.js"></script>
+<script src="forEach.spec.js"></script>-->
 
     
 </body>
