refactor filter and pop method; add wip concact methods

--- a/staff/judy-grayland/frontend/curries/index.html
+++ b/staff/judy-grayland/frontend/curries/index.html
@@ -32,5 +32,8 @@
 
     <script src="Curry.prototype.filter.js"></script>
     <script src="Curry.prototype.filter.spec.js"></script>
+
+    <script src="WiPCurry.prototype.concat.js"></script>
+    <script src="WiPCurry.prototype.concat.spec.js"></script>
   </body>
 </html>
