modify splice function

--- a/staff/isabel-dominguez/frontend/curries/index.html
+++ b/staff/isabel-dominguez/frontend/curries/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <script src="Curry.constructor.js"></script>
-    <script src="Curry.constructor.spec.js"></script>
+    <!-- <script src="Curry.constructor.spec.js"></script>
 
     <script src="Curry.prototype.at.js"></script>
     <script src="Curry.prototype.at.spec.js"></script>
@@ -43,7 +43,7 @@
     <script src="Curry.prototype.push.spec.js"></script>
 
     <script src="Curry.prototype.slice.js"></script>
-    <script src="Curry.prototype.slice.spec.js"></script>
+    <script src="Curry.prototype.slice.spec.js"></script> -->
 
     <script src="Curry.prototype.splice.js"></script>
     <script src="Curry.prototype.splice.spec.js"></script>
