isolate data base from other layers; add new post functionality; refactor styles

--- a/staff/manuel-barzi/frontend/app.11/index.html
+++ b/staff/manuel-barzi/frontend/app.11/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <div id="register-view" class="view">
+    <div id="register-view">
         <h1>Register</h1>
 
-        <form class="form">
+        <form class="register-form">
             <label for="name-input">Name</label>
             <input id="name-input" type="text">
 
@@ -29,10 +29,10 @@
         <a href="">Login</a>
     </div>
 
-    <div id="login-view" class="view">
+    <div id="login-view">
         <h1>Login</h1>
 
-        <form class="form">
+        <form class="login-form">
             <label for="email-input">E-mail</label>
             <input id="email-input" type="email">
 
@@ -58,10 +58,10 @@
             </div>
         </header>
 
-        <div id="profile-view" class="view">
+        <div id="profile-view">
             <h2>Update e-mail</h2>
 
-            <form id="change-email-form" class="form">
+            <form id="change-email-form">
                 <label for="new-email-input">New e-mail</label>
                 <input id="new-email-input" type="email">
 
@@ -76,7 +76,7 @@
 
             <h2>Update password</h2>
 
-            <form id="change-password-form" class="form">
+            <form id="change-password-form">
                 <label for="password-input">Current password</label>
                 <input type="password" id="password-input">
 
@@ -90,10 +90,10 @@
             </form>
         </div>
 
-        <div id="new-post-view" class="view">
+        <div id="new-post-view">
             <h2>New post</h2>
 
-            <form id="new-post-form" class="form">
+            <form id="new-post-form">
                 <label for="image-input">Image</label>
                 <input type="url" id="image-input">
 
