--- a/staff/anna-cuenca/frontend/curries/index.html
+++ b/staff/anna-cuenca/frontend/curries/index.html
@@ -9,22 +9,38 @@
 
 <body>
     <script src="Curry.constructor.js"></script>
-    <!-- <script src="Curry.constructor.spec.js"></script> -->
+  <script src="Curry.constructor.spec.js"></script> 
 
-   <!--  <script src="Curry.prototype.push.js"></script>
-    <script src="Curry.prototype.push.spec.js"></script>
+    <!--  <script src="Curry.prototype.push.js"></script>
+    <script src="Curry.prototype.push.spec.js"></script> 
 
     <script src="Curry.prototype.pop.js"></script>
-    <script src="Curry.prototype.pop.spec.js"></script>
+    <script src="Curry.prototype.pop.spec.js"></script> 
 
     <script src="Curry.prototype.at.js"></script>
-    <script src="Curry.prototype.at.spec.js"></script>-->
+    <script src="Curry.prototype.at.spec.js"></script> -->
 
-    <script src="Curry.prototype.concat.js"></script>
-    <script src="Curry.prototype.concat.spec.js"></script>
+    <!--  <script src="Curry.prototype.concat.js"></script>
+    <script src="Curry.prototype.concat.spec.js"></script> 
 
-    <!-- <script src="Curry.prototype.forEach.js"></script>
-    <script src="Curry.prototype.forEach.spec.js"></script> -->
+    <script src="Curry.prototype.forEach.js"></script>
+    <script src="Curry.prototype.forEach.spec.js"></script> 
+
+    <script src="Curry.prototype.join.js"></script>
+    <script src="Curry.prototype.join.spec.js"></script>
+
+    <script src="Curry.prototype.forEach.js"></script>
+    <script src="Curry.prototype.forEach.spec.js"></script> 
+
+   <script src="Curry.prototype.indexOf.js"></script>
+    <script src="Curry.prototype.indexOf.spec.js"></script>
+
+    <script src="Curry.prototype.slice.js"></script>
+    <script src="Curry.prototype.slice.spec.js"></script>  -->
+
+    <script src="Curry.prototype.splice.js"></script>
+    <script src="Curry.prototype.splice.spec.js"></script>
+
 </body>
 
 </html>
