--- a/staff/isabel-dominguez/frontend/curries/index.html
+++ b/staff/isabel-dominguez/frontend/curries/index.html
@@ -47,6 +47,9 @@
 
     <script src="Curry.prototype.splice.js"></script>
     <script src="Curry.prototype.splice.spec.js"></script>
+
+    <!-- <script src="Curry.prototype.reverse.js"></script>
+    <script src="Curry.prototype.reverse.spec.js"></script> -->
 </body>
 
 </html>
