--- a/staff/isabel-dominguez/frontend/app copy/index.html
+++ b/staff/isabel-dominguez/frontend/app copy/index.html
@@ -4,86 +4,112 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="icons8-tableware-64.png" type="image/x-icon">
-    <title>Batch Cooking</title>
+    <link rel="shortcut icon" href="icons8-instagram-50.png" type="image/x-icon">
+    <title>APP</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="register">
+    <div id="register-view" class="view">
         <h1>Register</h1>
 
-        <form>
-            <label for="name">Name</label>
-            <input id="name" type="text">
+        <form class="form">
+            <label for="name-input">Name</label>
+            <input id="name-input" type="text">
 
-            <label for="email">E-mail</label>
-            <input id="email" type="email">
+            <label for="email-input">E-mail</label>
+            <input id="email-input" type="email">
 
-            <label for="password">Password</label>
-            <input id="password" type="password">
+            <label for="password-input">Password</label>
+            <input type="password" id="password-input">
 
-            <button>Register</button>
+            <button type="submit">Register</button>
         </form>
 
-        <a href="">Log in</a>
+        <a href="">Login</a>
     </div>
 
-    <div id="login">
+    <div id="login-view" class="view">
         <h1>Login</h1>
 
-        <form>
-            <label for="email">E-mail</label>
-            <input id="email" type="email">
+        <form class="form">
+            <label for="email-input">E-mail</label>
+            <input id="email-input" type="email">
 
-            <label for="password">Password</label>
-            <input id="password" type="password">
+            <label for="password-input">Password</label>
+            <input type="password" id="password-input">
 
-            <button id="loginButton">Login</button>
+            <button type="submit">Login</button>
         </form>
 
         <a href="">Register</a>
     </div>
 
-    <div id="home">
-        <h1><a href="" id="home-link">Home</a></h1>
+    <div id="home-view">
+        <header class="home-header">
+            <h1><a href="" id="home-link">Home</a></h1>
 
-        <a href="" class="profile-link" id="profile-link">Profile</a>
+            <div>
+                <button id="new-post-button">+</button>
 
-        <button id="goback">Go back</button>
+                <a href="" class="profile-link" id="profile-link">Profile</a>
 
-        <div id="profile-view">
-            <button id="changepass">Change password</button>
+                <button id="logout-button">Logout</button>
+            </div>
+        </header>
 
-            <form id="changepassform">
-                <label for="currentPassword">Current password:</label>
-                <input id="currentPassword" type="password"><br>
+        <div id="profile-view" class="view">
+            <h2>Update e-mail</h2>
 
-                <label for="newPassword">New password:</label>
-                <input id="newPassword" type="password"><br>
+            <form id="change-email-form" class="form">
+                <label for="new-email-input">New e-mail</label>
+                <input id="new-email-input" type="email">
 
-                <label for="confirmPassword">Confirm password:</label>
-                <input id="confirmPassword" type="password"><br>
+                <label for="new-email-confirm-input">Confirm new e-mail</label>
+                <input id="new-email-confirm-input" type="email">
 
-                <button id="passbuttonchange">Change password ✅</button>
+                <label for="password-input">Password</label>
+                <input type="password" id="password-input">
+
+                <button type="submit">Update e-mail</button>
             </form>
 
-            <button id="changeemail">Change E-mail</button>
+            <h2>Update password</h2>
 
-            <form id="changeemailform">
-                <label for="currentEmail">Current E-mail:</label>
-                <input id="currentEmail" type="email"><br>
+            <form id="change-password-form" class="form">
+                <label for="password-input">Current password</label>
+                <input type="password" id="password-input">
 
-                <label for="newEmail">New E-mail:</label>
-                <input id="newEmail" type="email"><br>
+                <label for="new-password-input">New password</label>
+                <input id="new-password-input" type="password">
 
-                <label for="putpassword">Put your password:</label>
-                <input id="putpassword" type="password"><br>
+                <label for="new-password-confirm-input">Confirm new password</label>
+                <input id="new-password-confirm-input" type="password">
 
-                <button id="emailbuttonchange">Change E-mail ✅</button>
+                <button type="submit">Update password</button>
             </form>
         </div>
+
+        <div id="new-post-view" class="view">
+            <h2>New post</h2>
+
+            <form id="new-post-form" class="form">
+                <label for="image-input">Image</label>
+                <input type="url" id="image-input">
+
+                <label for="text-input">Text</label>
+                <input type="text" id="text-input">
+
+                <button type="submit">Post</button>
+                <button id="cancel-new-post-button">Cancel</button>
+            </form>
+        </div>
+
+        <div id="posts-view">
+        </div>
     </div>
+
+    <script src="polyfills.js"></script>
 
     <script src="data.js"></script>
 
