--- a/staff/isabel-dominguez/frontend/app/index.html
+++ b/staff/isabel-dominguez/frontend/app/index.html
@@ -106,6 +106,8 @@
         </div>
 
         <div id="posts-view">
+            <!-- <button class="like-post-button">✅</button>
+            <button class="delete-post-button">Delete Post</button> -->
         </div>
     </div>
 
