add Curry reverse method

--- a/staff/judy-grayland/frontend/curries/index.html
+++ b/staff/judy-grayland/frontend/curries/index.html
@@ -9,7 +9,7 @@
     <script src="Curry.constructor.js"></script>
     <script src="Curry.constructor.spec.js"></script>
 
-    <script src="Curry.prototype.push.js"></script>
+    <!-- <script src="Curry.prototype.push.js"></script>
     <script src="Curry.prototype.push.spec.js"></script>
 
     <script src="Curry.prototype.at.js"></script>
@@ -31,9 +31,12 @@
     <script src="Curry.prototype.find.spec.js"></script>
 
     <script src="Curry.prototype.filter.js"></script>
-    <script src="Curry.prototype.filter.spec.js"></script>
+    <script src="Curry.prototype.filter.spec.js"></script> -->
 
-    <script src="WiPCurry.prototype.concat.js"></script>
-    <script src="WiPCurry.prototype.concat.spec.js"></script>
+    <script src="Curry.prototype.reverse.js"></script>
+    <script src="Curry.prototype.reverse.spec.js"></script>
+
+    <!-- <script src="WiPCurry.prototype.concat.js"></script>
+    <script src="WiPCurry.prototype.concat.spec.js"></script> -->
   </body>
 </html>
