--- a/staff/belen-ivars/frontend/curries/index.html
+++ b/staff/belen-ivars/frontend/curries/index.html
@@ -20,15 +20,14 @@
 	<script src="Curry.prototype.at.js"></script>
 	<script src="Curry.prototype.at.spec.js"></script>
 
-
 	<script src="Curry.prototype.forEach.js"></script>
-	<script src="Curry.prototype.forEach.spec.js"></script> -->
-
-	<!-- <script src="Curry.prototype.splice.js"></script>
-	<script src="Curry.prototype.splice.spec.js"></script> -->
+	<script src="Curry.prototype.forEach.spec.js"></script> 
 
 	<script src="Curry.prototype.join.js"></script>
-	<script src="Curry.prototype.join.spec.js"></script>
+	<script src="Curry.prototype.join.spec.js"></script> -->
+
+	<script src="Curry.prototype.splice.js"></script>
+	<script src="Curry.prototype.splice.spec.js"></script>
 </body>
 
 </html>
