--- a/staff/josem-cembrano/frontend/app-rework/curries/index.curry.html
+++ b/staff/josem-cembrano/frontend/app-rework/curries/index.curry.html
@@ -36,8 +36,8 @@
     <!--<script src="Curry.prototype.map.js"></script>
     <script src="Curry.prototype.map.spec.js"></script>-->
 
-    <script src="Curry.prototype.pop.js"></script>
-    <script src="Curry.prototype.pop.spec.js"></script>
+    <!--<script src="Curry.prototype.pop.js"></script>
+    <script src="Curry.prototype.pop.spec.js"></script>-->
 
     <!--<script src="Curry.prototype.push.js"></script>
     <script src="Curry.prototype.push.spec.js"></script>-->
@@ -50,6 +50,15 @@
 
     <!--<script src="Curry.prototype.join.js"></script>
     <script src="Curry.prototype.join.spec.js"></script>-->
+
+    <!--<script src="Curry.prototype.reverse.js"></script>
+    <script src="Curry.prototype.reverse.spec.js"></script>-->
+
+    <!--<script src="Curry.prototype.toReversed.js"></script>
+    <script src="Curry.prototype.toReversed.spec.js"></script>-->
+
+    <script src="Curry.prototype.filter.js"></script>
+    <script src="Curry.prototype.filter.spec.js"></script>
 </body>
 
 </html>
