--- a/staff/luis-felipe-garcia/frontend/arrays/index.html
+++ b/staff/luis-felipe-garcia/frontend/arrays/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
 
 <!-- <script src="at.js"></script>
-<script src="at.spec.js"></script>
+<script src="at.spec.js"></script> -->
 
 <script src="concat.js"></script>
 <script src="concat.spec.js"></script>
 
-<script src="indexOf.js"></script>
+<!--<script src="indexOf.js"></script>
 <script src="indexOf.spec.js"></script>
 
 <script src="join.js"></script>
@@ -29,11 +31,22 @@
 <script src="map.spec.js"></script>
 
 <script src="filter.js"></script>
-<script src="filter.spec.js"></script>-->
+<script src="filter.spec.js"></script>
 
 <script src="find.js"></script>
-<script src="find.spec.js"></script>
+<script src="find.spec.js"></script>-->
 
-    
+<!--<script src="slice.js"></script>
+<script src="slice.spec.js"></script>-->
+
+<!--<script src="splice.js"></script>
+<script src="splice.spec.js"></script>-->
+
+<script src="forEach.js"></script>
+<script src="forEach.spec.js"></script>
+
+
+
 </body>
+
 </html>
