--- a/staff/josem-cembrano/frontend/curries-es6/index.html
+++ b/staff/josem-cembrano/frontend/curries-es6/index.html
@@ -14,9 +14,10 @@
     
 <script src="pepetest.js"></script>
 
-<script src="Curry.contructor.spec.js"></script>
+<script src="Curry.constructor.spec.js"></script>
+
     <script src="Curry.prototype.at.spec.js"></script>
-    <!-- <script src="Curry.prototype.concat.spec.js"></script>
+    <script src="Curry.prototype.concat.spec.js"></script>
     <script src="Curry.prototype.filter.spec.js"></script>
     <script src="Curry.prototype.find.spec.js"></script>
     <script src="Curry.prototype.forEach.spec.js"></script>
@@ -30,7 +31,7 @@
     <script src="Curry.prototype.join.spec.js"></script>
     <script src="Curry.prototype.reverse.spec.js"></script>
     <script src="Curry.prototype.toReversed.spec.js"></script>
-    <script src="Curry.prototype.filter.spec.js"></script> -->
+    <script src="Curry.prototype.filter.spec.js"></script>
 </body>
 
 </html>
