--- a/staff/isabel-dominguez/frontend/curries-es6.js/index.html
+++ b/staff/isabel-dominguez/frontend/curries-es6.js/index.html
@@ -9,12 +9,13 @@
 </head>
 
 <body>
+    <script src="pepetest.js"></script>
     <script src="Curry.js"></script>
-    <script src="Curry.constructor.spec.js"></script>
+    <script src="Curry.spec.js"></script>
 
     <script src="Curry.prototype.at.spec.js"></script>
 
-    <script src="Curry.prototype.concat.spec.js"></script>
+    <!-- <script src="Curry.prototype.concat.spec.js"></script>
 
     <script src="Curry.prototype.filter.spec.js"></script>
 
@@ -36,7 +37,7 @@
 
     <script src="Curry.prototype.splice.spec.js"></script>
 
-    <script src="Curry.prototype.reverse.spec.js"></script>
+    <script src="Curry.prototype.reverse.spec.js"></script> -->
 </body>
 
 </html>
