--- a/staff/luis-felipe-garcia/frontend/curries-es6/index.html
+++ b/staff/luis-felipe-garcia/frontend/curries-es6/index.html
@@ -13,47 +13,20 @@ Viewed
     <script src="Curry.js"></script>
     <script src="test.js"></script>
 
-    <script src="Curry.constructor.spec.js"></script>
-    
+    <script src="Curry.constructor.spec.js"></script>    
+    <script src="Curry.prototype.at.spec.js"></script>
+    <script src="Curry.prototype.concat.spec.js"></script>
+    <script src="Curry.prototype.filter.spec.js"></script>
+    <script src="Curry.prototype.find.spec.js"></script>
+    <script src="Curry.prototype.forEach.spec.js"></script>
+    <script src="Curry.prototype.join.spec.js"></script>
+    <script src="Curry.prototype.map.spec.js"></script>   
     <script src="Curry.prototype.push.spec.js"></script>
     <script src="Curry.prototype.pop.spec.js"></script>
-
-   <!-- <script src="Curry.prototype.at.js"></script>
-    <script src="Curry.prototype.at.spec.js"></script>-->
-
-    <!--<script src="Curry.prototype.concat.js"></script>
-    <script src="Curry.prototype.concat.spec.js"></script>
-
-    <script src="Curry.prototype.filter.js"></script>
-    <script src="Curry.prototype.filter.spec.js"></script>
-
-    <script src="Curry.prototype.find.js"></script>
-    <script src="Curry.prototype.find.spec.js"></script>-->
-
-
-    <!--<script src="Curry.prototype.join.js"></script>
-    <script src="Curry.prototype.join.spec.js"></script>
-
-    <script src="Curry.prototype.map.js"></script>
-    <script src="Curry.prototype.map.spec.js"></script>-->
-
-    <!--<script src="Curry.prototype.pop.js"></script>
-    <script src="Curry.prototype.pop.spec.js"></script>
-
-    <script src="Curry.prototype.slice.js"></script>
     <script src="Curry.prototype.slice.spec.js"></script>
-
-    <script src="Curry.prototype.forEach.js"></script>
-    <script src="Curry.prototype.forEach.spec.js"></script>-->
-
-    <!--<script src="Curry.prototype.splice.js"></script>
     <script src="Curry.prototype.splice.spec.js"></script>
-
-    <script src="Curry.prototype.unshift.js"></script>
+    <script src="Curry.prototype.toString.spec.js"></script>
     <script src="Curry.prototype.unshift.spec.js"></script>
-
-    <script src="Curry.prototype.toString.js"></script>
-    <script src="Curry.prototype.toString.spec.js"></script>-->
 </body>
 
 </html>
