--- a/staff/luis-felipe-garcia/frontend/curries/index.html
+++ b/staff/luis-felipe-garcia/frontend/curries/index.html
@@ -39,10 +39,10 @@ Viewed
     <script src="Curry.prototype.pop.spec.js"></script>
 
     <script src="Curry.prototype.slice.js"></script>
-    <script src="Curry.prototype.slice.spec.js"></script>
+    <script src="Curry.prototype.slice.spec.js"></script>-->
 
     <script src="Curry.prototype.forEach.js"></script>
-    <script src="Curry.prototype.forEach.spec.js"></script>-->
+    <script src="Curry.prototype.forEach.spec.js"></script>
 
     <!--<script src="Curry.prototype.splice.js"></script>
     <script src="Curry.prototype.splice.spec.js"></script>-->
