--- a/staff/belen-garnica/frontend/arrays/index.html
+++ b/staff/belen-garnica/frontend/arrays/index.html
@@ -15,6 +15,9 @@
 
     <script src="splice.js"></script>
     <script src="splice.spec.js"></script>
+
+    <!-- <script src="pop.js"></script>
+    <script src="pop.spec.js"></script> -->
 </body>
 
 </html>
